fix: Make Dark Mode Arrows More Visible (#781)
* Make Dark Mode Arrows More Visible

* Update global.styl

* fix: dim color

--- a/src/devtools/style/global.styl
+++ b/src/devtools/style/global.styl
@@ -71,6 +71,17 @@ $arrow-color = $vue-ui-color-dark
     border-bottom 4px solid transparent
     border-right 6px solid $arrow-color
 
+  .vue-ui-dark-mode &
+    $arrow-color = rgba($vue-ui-color-light-neutral, .4)
+    &.up
+      border-bottom-color $arrow-color
+    &.down
+      border-top-color $arrow-color
+    &.right
+      border-left-color $arrow-color
+    &.left
+      border-right-color $arrow-color
+
 .notice
   display flex
   align-items center
